# file-organizer

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: python-app.yml
organizer/: disk_operations.py  llm.py  models.py  organizer.py  renderer.py  utils.py
src/organizer/: llm.py  logging_config.py  main.py  organizer.py  renderer.py
tests/: data_generator.py  test_disk_operations.py  test_organizer.py  test_renderer.py
utils/: logging_config.py
