[project]
name = "file-organizer"
version = "0.1.0"
description = "A LLM powered CLI utility to organize your files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.73.6",
    "pydantic>=2.11.7",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.2",
]
